--- a/conclusao.css
+++ b/conclusao.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(155, 223, 153);
+    background-color: rgb(168, 228, 228);
 }
 
 h3{
@@ -12,7 +12,7 @@ form{
 }
  
 button{
-    background-color: rgb(51, 121, 48);
+    background-color: rgb(145, 196, 196)
     color: white;
     width: 80px;
     height: 30px;
