--- a/endereco.css
+++ b/endereco.css
@@ -5,6 +5,14 @@ body{
 form{
     color: rgb(10, 9, 9);
 }
+
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%
+}
  
 button{
     background-color: rgb(145, 196, 196);
