--- a/index.css
+++ b/index.css
@@ -1,9 +1,18 @@
 body{
     background-color:  rgb(168, 228, 228);
+    font-size: large;
 }
  
 form{
     color: rgb(10, 9, 9);
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%
 }
  
 button{
