--- a/conclusao.css
+++ b/conclusao.css
@@ -4,15 +4,15 @@ body{
 
 h3{
     text-align: center;
-    
+    font-size: larger;
 }
- 
+
 form{
     color: rgb(10, 9, 9);
 }
  
 button{
-    background-color: rgb(145, 196, 196)
+    background-color: rgb(145, 196, 196);
     color: white;
     width: 80px;
     height: 30px;
