--- a/conclusao.css
+++ b/conclusao.css
@@ -2,6 +2,10 @@ body{
     background-color: rgb(168, 228, 228);
 }
 
+form{
+    color: rgb(10, 9, 9);
+}
+
 h3{
     text-align: center;
     font-size: larger;
